--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.novoda:bintray-release:0.4.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.novoda:bintray-release:0.5.0'
     }
 }
 
@@ -27,10 +28,9 @@ ext {
     publishVersion = '1.1.0'
     licences = ['Apache-2.0']
 
-    compileSdkVersion = 26
-    buildToolsVersion = '26.0.1'
+    compileSdkVersion = 28
     minSdkVersion = 16
-    targetSdkVersion = 25
+    targetSdkVersion = 28
 
-    supportLibVersion = '26.0.0'
+    supportLibVersion = '28.0.0'
 }
