upgraded to androidx

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.yarolegovich.slidingrootnav.sample"
         minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
 
     buildTypes {
@@ -19,9 +19,9 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:design:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "androidx.appcompat:appcompat:$supportLibVersion"
+    implementation "com.google.android.material:material:$supportLibVersion"
+    implementation "androidx.recyclerview:recyclerview:$supportLibVersion"
 
     implementation project(':library')
 }
