--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
+        google()
     }
 }
 
@@ -32,5 +33,5 @@ ext {
     minSdkVersion = 16
     targetSdkVersion = 28
 
-    supportLibVersion = '28.0.0'
+    supportLibVersion = '1.0.0-beta01'
 }
